<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.run.RunFragment">


    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/startRunBtn"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:clickable="true"
        android:contentDescription="@string/start_run"
        android:focusable="true"
        android:text="@string/start"
        android:textAlignment="viewEnd"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:textStyle="bold|italic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.846"
        tools:ignore="TextContrastCheck" />

    <com.google.android.gms.maps.MapView
        android:contentDescription="@string/your_map_location_and_coins"
        android:id="@+id/mapView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/settingsBtn"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginEnd="50dp"
        android:clickable="true"
        android:contentDescription="@string/settings"
        android:focusable="true"
        android:src="@drawable/ic_settings"
        app:backgroundTint="@color/white"
        app:fabCustomSize="48dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.297"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.83"
        app:rippleColor="@color/grey"
        app:tint="@color/black" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/statsBtn"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginStart="50dp"
        android:clickable="true"
        android:contentDescription="@string/your_run_statistics"
        android:focusable="true"
        android:src="@drawable/ic_bar_chart_2"
        app:backgroundTint="@color/white"
        app:fabCustomSize="48dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.705"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.83"
        app:rippleColor="@color/grey"
        app:tint="@color/black"
        tools:ignore="ImageContrastCheck" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/reloadLocationBtn"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:clickable="true"
        android:contentDescription="@string/reload_ticket_location"
        android:focusable="true"
        android:src="@drawable/ic_reload_location"
        app:backgroundTint="@color/white"
        app:fabCustomSize="48dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.955"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.023"
        app:rippleColor="@color/grey"
        app:tint="@null" />


</androidx.constraintlayout.widget.ConstraintLayout>